--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-router": "^4.3.0",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
