--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.3.0",
     "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.1.0"
